# st-backup

./: .gitignore  README.org  cabal.project  default.nix  example-config.toml  shell.nix
nix/: default.nix  sources.json
nix/tsm-client/: default.nix  tsm-client.nix
st-backup-server/: st-backup-server.cabal
st-backup-server/src-exe/: Backup.hs  Common.hs  Files.hs  Main.hs  Persons.hs  Projects.hs  Restore.hs
st-backup-server/src/STBackup/: Common.hs
st-backup-server/src/STBackup/Backend/: Database.hs  FileLocker.hs
st-backup-server/src/STBackup/Backend/Database/: Tivoli.hs
st-backup-server/src/STBackup/Backend/FileLocker/: Naive.hs
st-backup-shared/: st-backup-shared.cabal
st-backup-shared/src/STBackup/: API.hs  Config.hs  Logging.hs
st-backup-shared/src/STBackup/API/Types/: Field.hs
st-backup-shared/src/STBackup/Config/: Toml.hs
st-backup-shared/src/STBackup/Logging/: Core.hs  Effect.hs
st-backup-web/: st-backup-web.cabal
st-backup-web/http/: index.html
st-backup-web/src/: CommandLineParser.hs  Main.hs  Server.hs
st-backup-web/src/STBackup/: Web.hs
st-backup-web/src/STBackup/Web/: CommandLineParser.hs  Controller.hs  Model.hs  ProxySettings.hs  Req.hs  View.hs
